# octapy

./: .gitignore  CLAUDE.md  OCTAPY-ISSUES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setenv.sh
demos/: acid_909.py  flex_live.py  hello_flex.py
demos/patterns/: __init__.py  euclid.py
docs/: MIDI.md  PARTS.md  RECORDERS.md  ROADMAP.md  SAMPLES.md  SUPPORTED.md  audio-part-defaults.md  fx-effects.md  fx-implementation.md  high-level-api-considerations.md  live-transition-setup.md  midi-implementation.md  midi-tracks.md  octatrack-parts-code-smell.md  parts-and-scenes.md  recorder-buffers.md  render-settings.md  standalone-object-model.md  understanding-parts.md  unparsed-project-fields.md
octapy/: __init__.py
octapy/_io/: __init__.py  bank.py  base.py  markers.py  project.py
octapy/api/: __init__.py  bank.py  banks.py  base.py  enums.py  markers.py  part.py  parts.py  pattern.py  patterns.py  project.py  projects.py  sample_pool.py  settings.py  slot_manager.py  step.py  utils.py
octapy/api/core/: __init__.py  _fx.py  _page.py  (+8 more)
tests/: __init__.py  conftest.py  test_banks.py  test_core.py  test_fx.py  test_markers.py  test_parts.py  test_patterns.py  test_plocks.py  test_projects.py  test_roundtrip.py  test_scenes.py  test_slots.py  test_standalone_objects.py  test_templates.py  test_to_dict.py  test_track_layout.py
tools/: clean_local.py  copy_project.py  copy_samples.py  delete_project.py  delete_remote_project.py  download_erica_pico_packs.py  list_projects.py  remove_local_project.py  remove_remote_project.py
(+63 files in other folders)
