[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octapy"
version = "0.1.0"
description = "Python library for Elektron Octatrack binary file I/O"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "octapy contributors"}
]
keywords = ["octatrack", "elektron", "music", "sampler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "pydub>=0.25.0",
]

[project.urls]
"Homepage" = "https://github.com/octapy/octapy"

[tool.setuptools.packages.find]
where = ["."]
include = ["octapy*"]

[tool.setuptools.package-data]
"octapy.templates" = ["*.zip"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (skipped by default, run with '--slow')",
]
